--- a/sample-policy.yaml
+++ b/sample-policy.yaml
@@ -1,4 +1,9 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: appuio-acm-sample-policy
+---
 apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
