--- a/sample-app.yaml
+++ b/sample-app.yaml
@@ -1,8 +1,24 @@
----
-apiVersion: v1
+apiVersion: v1                    
 kind: Namespace
 metadata:
   name: appuio-acm-sample-app
+---
+apiVersion: app.k8s.io/v1beta1
+kind: Application
+metadata:
+  name: appuio-acm-sample-app
+  namespace: appuio-acm-sample-app
+spec:
+  componentKinds:
+  - group: apps.open-cluster-management.io
+    kind: Subscription
+  descriptor: {}
+  selector:
+    matchExpressions:
+    - key: app
+      operator: In
+      values: 
+      - appuio-acm-sample-app
 ---
 apiVersion: apps.open-cluster-management.io/v1
 kind: Channel
@@ -10,37 +26,34 @@ metadata:
   name: appuio-acm-sample-app
   namespace: appuio-acm-sample-app
 spec:
-  type: GitHub
-  pathname: https://github.com/appuio/acm-example.git
+  type: Git
+  pathname: 'https://github.com/appuio/acm-example.git'
 ---
 apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
 metadata:
-  name: appuio-acm-sample-app
-  namespace: appuio-acm-sample-app
   annotations:
-    apps.open-cluster-management.io/git-path: sample-app
     apps.open-cluster-management.io/git-branch: main
+    apps.open-cluster-management.io/git-path: sample-app
   labels:
     app: appuio-acm-sample-app
+  name: appuio-acm-sample-app
+  namespace: appuio-acm-sample-app
 spec:
   channel: appuio-acm-sample-app/appuio-acm-sample-app
-  name: appuio-acm-sample-app
   placement:
-    clusters:
-    - name: ocp3-cloudscale-staging
+    placementRef:
+      kind: PlacementRule
+      name: ocp3-cloudscale-staging
 ---
-apiVersion: app.k8s.io/v1beta1
-kind: Application
+apiVersion: apps.open-cluster-management.io/v1
+kind: PlacementRule
 metadata:
   labels:
     app: appuio-acm-sample-app
-  name: appuio-acm-sample-app
+  name: ocp3-cloudscale-staging
   namespace: appuio-acm-sample-app
 spec:
-  componentKinds:
-  - group: apps.open-cluster-management.io
-    kind: Subscription
-  selector:
+  clusterSelector:
     matchLabels:
-      app: appuio-acm-sample-app
+      'name': 'ocp3-cloudscale-staging'
