--- a/sample-policy.yaml
+++ b/sample-policy.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -71,7 +70,7 @@ metadata:
   name: binding-appuio-acm-sample-policy
   namespace: appuio-acm-sample-policy
 placementRef:
-  name: placement-appuio-acm-sample-policy
+  name: rancher-cloudscale-staging
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
@@ -82,7 +81,7 @@ subjects:
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
-  name: placement-appuio-acm-sample-policy
+  name: rancher-cloudscale-staging
   namespace: appuio-acm-sample-policy
 spec:
   clusterConditions:
@@ -93,4 +92,4 @@ spec:
     - key: name
       operator: In
       values:
-      - "ocp3-cloudscale-staging"
+      - "rancher-cloudscale-staging"
